css/main.css
/* ... */
div.contador {
  position: relative;
  height: auto;
}

div.contador::before { /*Para colocar la imagen y se vea el contenido encima*/
  background-image: url(../img/bg-resumen.jpg);
  content: '';
}

ul.resumen-evento {
  position: relative;
  padding: 120px 0;
}

ul.resumen-evento li {
  width: 50%;
  float: left;
  text-align: center;
  color: #ffffff;
  text-transform: uppercase;
  font-family: 'Oswald', sans-serif;
  font-size: 24px;
}

@media only screen and (min-width:768px) {
  ul.resumen-evento li {
    width: 25%;
  }
}

p.numero {
  color: #f34918;
  font-size: 4em;
  display: block;
  margin: 0 0 10px 0;
  font-family: 'Oswald', sans-serif;
}

/**Tabla de Precios**/

ul.lista-precios > li { /*Para que solo se vea una columna en dispositivos moviles*/
  padding: 10px;
  }

@media only screen and (min-width:768px) { /*Para tres diviones en equipos grandes*/
  ul.lista-precios > li {
    float: left;
    width: 33.3% /*3 divisiones*/
  }
}

div.tabla-precio { /*Borde y alineacion de texto en tabla*/
  border: 1px solid #e1e1e1;
  background-color: #ffffff;
  padding: 40px 0;
  text-align: center;
  transition: all .3s ease;
}

div.tabla-precio:hover {
  transform: scale(1.1);
  border: 1px solid #f34918;
  box-shadow: 0px 0px 50px #666;
}

div.tabla-precio ul li { /*Formato de letra*/
  font-family: 'PT Sans', sans-serif;
  font-size: 14px;
  margin-bottom: 20px;
  text-transform: uppercase;
  color: #868686;
  line-height: 26px;
}

div.tabla-precio ul li::before { /*Fuente: fontawesome.com/how-to-use/on-the-web/advanced/css-pseudo-elements*/ /*icono de check*/
  font-family: 'font awesome 5 free';
  font-weight: 900;
  display: inline-block;
  vertical-align: top;
  padding: 0 5px;
  font-size: 20px;
  color: green;
  -webkit-font-smoothing: antialiased;
  content: '\f00c';
}

div.tabla-precio h3 {
  font-family: 'Oswald', sans-serif;
  font-size: 16px;
  text-transform: uppercase;
}

div.tabla-precio p.numero {
  color: #000000;
  margin-top: 20px 0;
}

/** Mapa **/

div.mapa {
  height: 420px;
  z-index: 1; /*Para que no desaparezca el menu fijo al pasar por el mapa, creado por mi*/
}


/** Testimoniales **/

div.testimoniales { /*El contenedor de todo*/
  padding-bottom: 20px;
}

div.testimonial {
  padding: 5px;
}

@media only screen and (min-width:768px) {
  div.testimonial {
    float: left;
    width: 33.3%;
  }
}

blockquote {
  background-color: #ffffff;
  border: 1px solid #e1e1e1;
  position: relative; /*Lo ponemos en posicion relativa para luego poder poner la imagen de las comillas en posicion absoluta*/
  margin: 0 0 10px 0;
  padding-bottom: 20px;
}

blockquote p {
  text-align: justify!important;
  font-size: 1em!important;
  font-family: 'PT Sans', sans-serif;
  padding: 0 20px 0 65px;

}

blockquote p::before {
  content: '\201c';
  position: absolute;
  left: 13px;
  top: 8px;
  font-size: 8rem;
  margin: 0;
  padding: 0;
  line-height: 1;
  color: #f34918;
}

footer.info-testimonial {
  padding: 0;
  background-color: transparent; /*Para que no aplique el color agregado en el footer de la seccion "footer", tambien se podria quitar este y colocarle mas peso al selector del footer real*/
}

footer.info-testimonial img {
  float: left;
  width: 20%;
  border-radius: 50%;
  margin-left: 20px;
}

footer.info-testimonial cite {
  text-align: left;
  color: #f34918;
  text-transform: uppercase;
  font-size: 12px;
  padding-top: 20px;
  width: 66.6%;
  float: right;
  font-weight: bold;
  font-style: normal;
}

footer.info-testimonial cite span {
  color: #000000;
  display: block; /* Para colocarlo como bloque en la parte de abajo, tambien podemos hacerlo con un br en el html*/
  text-transform: none; /*Para no heredar el text-transform: uppercase*/
  margin-top: 5px;
}

/**Newsletter**/

div.newsletter {
  position: relative;
  height: auto;

}

div.newsletter::before {
  background-image: url(../img/bg-newsletter.jpg);
  content: '';
}

div.newsletter .contenido {
  padding: 100px 0;
  color: #ffffff;
  text-align: center;
  position: relative; /*Para sobreponer el contenido en la imagen*/
}

div.newsletter .contenido p {
  font-size: 1.2em;
  text-transform: lowercase;
}

div.newsletter .contenido h3 {
  color: #ffffff;
  text-transform: uppercase;
  font-size: 7vw;
  font-family: 'PT Sans', sans-serif;
}

/**Faltan**/

div.cuenta-regresiva ul li  {
  text-transform: uppercase;
  font-family: 'Oswald', sans-serif;
  font-size: 1.6rem;
  text-align: center;
}

@media only screen and (min-width:768px) {
  div.cuenta-regresiva ul li {
    float: left;
    width: 25%;
  }
}

/**Footer**/

footer {
  background-color: #353535;
  padding-top: 40px;
  margin-top: 20px;
}

footer .contenedor > div {
  color: #ffffff;
  padding: 0px 20px;
  font-size: 12px;
}

@media only screen and (min-width:768px) {
  footer .contenedor > div {
    width: 33.3%;
    float: left;
  }
}

footer h3{
  color: #ffffff;
  text-transform: uppercase;
  font-family: 'Oswald', sans-serif;
  margin-bottom: 20px;
}

footer span {
  color: #f34918;
}

footer .ultimos-tweets li {
  margin-bottom: 10px;
}

footer nav.redes-sociales {
  text-align: left;
}

p.copyright{
  background-color: #2e2e2e;
  color: #ffffff;
  padding: 10px 0;
  margin: 20px 0 0 0;
  text-align: center;
}


/*** INTERNAS **/

/*Galeria de fotos, conferencia.html*/

body.conferencia .navegacion-principal .activo {
  border-bottom: 2px solid #fe4918;
}

/*Codigo de "div.galeria" creado por mi, Juan Carlos, para centrarlo. Chequear mejores posibilidades. Seccion 38,clase 290*/
div.galeria {
  display: inline-block;
  text-align: center;
}

div.galeria a {
  display: inline-block;
  margin-bottom: 5px;
}

/* Registro */

form.registro h3 {
  text-align: center;
  text-transform: uppercase;
  margin: 20px 0 0 0;
}

form.registro label {
  margin-bottom: 5px;
  font-weight: bold;
}
/* ... */

